fix the gap between try sample img in all panels

--- a/src/views/DesignEditor/components/Panels/panelItems/UploadDropzone/style.module.css
+++ b/src/views/DesignEditor/components/Panels/panelItems/UploadDropzone/style.module.css
@@ -18,7 +18,7 @@
 }
 
 .uploadInputContainer {
-  width: 288px;
+  width: 100%;
   height: 200px;
   position: relative;
   /* background-color: #f3f5f9; */
